--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.8", features = ["derive"] }
 eyre = "0.6.8"
+http-body = "1.0.0"
 http-body-util = "0.1.0"
-hyper = { version = "1.0.1", features = ["server", "client", "http1"] }
+hyper = { version = "1.0.1", features = ["server", "client", "http1" ] }
 hyper-util = { version = "0.1.0", features = [ "tokio" ] }
 log = "0.4.20"
+mlua = { version = "0.9.1", features = ["vendored", "macros", "async", "lua54"] }
 pretty_env_logger = "0.5.0"
 tokio = { version = "1.34.0", features = ["full"] }
