--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ hyper = { version = "1.0.1", features = ["server", "client", "http1" ] }
 hyper-util = { version = "0.1.0", features = [ "tokio" ] }
 log = "0.4.20"
 mlua = { version = "0.9.1", features = ["vendored", "macros", "async", "lua54"] }
+once_cell = "1.18.0"
 pretty_env_logger = "0.5.0"
 tokio = { version = "1.34.0", features = ["full"] }
