--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,7 @@ log = "0.4.20"
 mlua = { version = "0.9.1", features = ["vendored", "macros", "async", "lua54"] }
 once_cell = "1.18.0"
 pretty_env_logger = "0.5.0"
+rmp = "0.8.12"
+rmp-serde = "1.1.2"
+serde = { version = "1.0.193", features = ["derive"] }
 tokio = { version = "1.34.0", features = ["full"] }
