--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ pretty_env_logger = "0.5.0"
 rmp = "0.8.12"
 rmp-serde = "1.1.2"
 serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
