--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,13 @@ rmp-serde = "1.1.2"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["full"] }
+
+async-trait = "0.1.74"
+futures = "0.3.29"
+nvim-rs = { version = "0.6.0", features = [ "use_tokio" ] }
+pin-project-lite = "0.2.13"
+parity-tokio-ipc = "0.9.0"
+tokio-util = "0.7.10"
+lazy_static = "1.4.0"
+
+
