--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ http-body-util = "0.1.0"
 hyper = { version = "1.0.1", features = ["server", "client", "http1" ] }
 hyper-util = { version = "0.1.0", features = [ "tokio" ] }
 log = "0.4.20"
-mlua = { version = "0.9.1", features = ["vendored", "macros", "async", "lua54"] }
+mlua = { version = "0.9.1", features = ["vendored", "macros", "async", "lua54", "send"] }
 once_cell = "1.18.0"
 pretty_env_logger = "0.5.0"
 rmp = "0.8.12"
