--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,3 +50,11 @@ tokinotify = "0.1.0"
 
 [dev-dependencies]
 cucumber = "0.20.2"
+
+[[test]]
+name = "cucumber"
+path = "cucumber/requests.rs"
+test = true
+harness = false
+
+
